Fri Nov 29 20:43:57 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* compile.c : Bugsfix for dump_disasm_list.
	  rb_inspect denies a hidden object. So, insert rapper that creates
	  the unhidden one.
	  adjust->label is null sometimes.
	  insn_data_line_no makes no sense at all.

Fri Nov 29 18:06:45 2013  Shota Fukumori  <her@sorah.jp>

	* test/ruby/test_case.rb (test_method_missing): Test for r43913.

Fri Nov 29 17:53:22 2013  Shota Fukumori  <her@sorah.jp>

	* vm_insnhelper.c (check_match): Fix SEGV with VM_CHECKMATCH_TYPE_CASE
	  and class of `pattern` has `method_missing`
	  [Bug #8882] [ruby-core:58606]

Fri Nov 29 17:06:09 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_yield_block): yield block with rb_block_call_func
	  arguments.

	* range.c (range_each): use rb_yield_block.

	* include/ruby/ruby.h (RB_BLOCK_CALL_FUNC_ARGLIST): constify argv.

	* enum.c (rb_enum_values_pack): ditto.

	* vm_eval.c (rb_block_call, rb_check_block_call): ditto.

	* include/ruby/ruby.h (RB_BLOCK_CALL_FUNC_ARGLIST): for declaration
	  argument list of rb_block_call_func.

Fri Nov 29 11:26:43 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_block_call_func): add blockarg.  block
	  function can take block argument, e.g., proc {|&blockarg| ...}.

Thu Nov 28 21:43:48 2013  Zachary Scott  <e@zzak.io>

	* doc/dtrace_probes.rdoc: [DOC] Import dtrace probes doc from wiki

Thu Nov 28 21:17:32 2013  Zachary Scott  <e@zzak.io>

	* doc/contributing.rdoc: [DOC] Add heading above ChangeLog tips to
	  setup entry for commits, its not required. Actually easier if
	  contributors don't include a ChangeLog entry.

Thu Nov 28 21:16:18 2013  Zachary Scott  <e@zzak.io>

	* doc/contributing.rdoc: [DOC] Add coding style heading for patch
	  rules

Thu Nov 28 21:15:45 2013  Zachary Scott  <e@zzak.io>

	* doc/contributing.rdoc: [DOC] Add notes about deciding what to patch

Thu Nov 28 19:43:45 2013  Masaki Matsushita  <glass.saga@gmail.com>
